5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1637_2445.log
== TEST (2019-04-04 22:49:46) 
-- CODE:
e = input("escala (c/f): ")
f = float(input("temperatura: "))
if(e.lower() == "c"):
	f = (9*t)/5 +35
	print(round(f, 2))
else:
	c = 5/9*(f - 32)
	print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f = (9*t)/5 +35
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:50:47) 
-- CODE:
e = input("escala (c/f): ")
f = float(input("temperatura: "))
if (e.lower() == "c"):
	f = (9*t)/5 +32
	print(round(f, 2))
else:
	c = 5/9*(f - 32)
	print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f = (9*t)/5 +32
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:51:31) 
-- CODE:
e = input("escala (c/f): ")
f = float(input("temperatura: "))
if (e.lower() == "c"):
	f = (9 *t)/5 +32
	print(round(f, 2))
else:
	c = 5/9*(f - 32)
	print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f = (9 *t)/5 +32
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:51:50) 
-- CODE:
e = input("escala (c/f): ")
t = float(input("temperatura: "))
if (e.lower() == "c"):
	f = (9 *t)/5 +32
	print(round(f, 2))
else:
	c = 5/9*(f - 32)
	print(round(c, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 22:51:58) 
-- CODE:
e = input("escala (c/f): ")
t = float(input("temperatura: "))
if (e.lower() == "c"):
	f = (9 *t)/5 +32
	print(round(f, 2))
else:
	c = 5/9*(f - 32)
	print(round(c, 2))
-- EXECUTION TIME:
0.184621
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:

-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:52:14) 
-- CODE:
e = input("escala (c/f): ")
t = float(input("temperatura: "))
if (e.lower() == "c"):
	f = (9 *t)/5 +32
	print(round(f, 2))
else:
	c = 5/9*(t - 32)
	print(round(c, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:52:31) 
-- CODE:
e = input("escala (c/f): ")
t = float(input("temperatura: "))
if (e.lower() == "c"):
	f = (9 *t)/5 +32
	print(round(f, 2))
else:
	c = 5/9*(t - 32)
	print(round(c, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 22:52:42) 
-- CODE:
e = input("escala (c/f): ")
t = float(input("temperatura: "))
if (e.lower() == "c"):
	f = (9 *t)/5 +32
	print(round(f, 2))
else:
	c = 5/9*(t - 32)
	print(round(c, 2))
-- EXECUTION TIME:
0.156225
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:21:27) 
-- CODE:
e = input("escala (c/f): ")
t = float(input("temperatura: "))
if (e.lower() == "c"):
	f = (9 *t)/5 +32
	print(round(f, 2))
else:
	c = 5/9*(t - 32)
	print(round(c, 2))
-- EXECUTION TIME:
0.138033
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
